--- a/time/past/2025-0622_time.md
+++ b/time/past/2025-0622_time.md
@@ -13,8 +13,7 @@
 
 | 日付 | 開始時間 | 終了時間 | 合計時間 | 主な作業内容 |
 |------|----------|----------|----------|--------------|
-| 2025/06/25 | 23:30 | 00:30 | 1h00m | awsアカウント作成 |
-| 2025/06/23 | 20:30 | 21:00 | 0h30m | 100日サイト振り返り、ログ作成 |
+| 2025/06/22 | 14:30 | 18:30 | 4h00m | 100日サイト最終調整 |
 | 2025/06/22 | 14:30 | 14:30 | 1h00m | 100日サイトプロセスログまとめ、メインページ最終調整 |
 | 2025/06/22 | 14:30 | 14:30 | 1h00m | 100日サイトプロセスログまとめ、メインページ最終調整 |
 | 2025/06/22 | 13:30 | 14:30 | 1h00m | 100日サイトドメインページ遷移アニメーション追加、イントロダクション最終調整 |
