200日目までの学習まとめ・リポジトリ整理

--- a/goals/past/100days/2025-0622_100y.md
+++ b/goals/past/100days/2025-0622_100y.md
@@ -1,11 +1,13 @@
 # WEB開発学習ロードマップ
- - プログラミングを初めて100日目までのロードマップ
+ - プログラミング学習を初めて約100日目のロードマップと振り返り
 <br>
 
 ## 目次
-- [学習開始時の目標設定](#学習開始時の目標設定)
-- [現段階の目標設定](#現段階の目標設定#5ヶ月目第5期)
-- [週間学習計画](#週間学習計画)
+- [現段階の目標設定](#現段階の目標設定３ヶ月目第３期2025515-)
+- [学習開始時の目標設定](#学習開始時の目標設定2025315-)
+- [週間学習記録](#週間学習記録)
+  - [4ヶ月目（第4期）](#4ヶ月目第4期)
+  - [3ヶ月目（第3期）](#3ヶ月目第3期)
   - [2ヶ月目（第2期）](#2ヶ月目第2期)
   - [1ヶ月目（第1期）](#1ヶ月目第1期)
 - [学習方法](#学習方法)
@@ -112,11 +114,11 @@
 
 <br>
 
-## 週間学習計画
+## 週間学習記録
 
 <br>
 
-## 4ヶ月目（第3期）
+## 4ヶ月目（第4期）
 
 <br>
 
